@@ -55,8 +55,8 @@
     <string name="auth_scheme_text">Auth Scheme</string>
     <string name="launch_main_activity_button">Start Task</string>
     <string name="get_active_broker">Get active broker package</string>
-    <string name="is_qr_pin_available">is QR + PIN available</string>
     <string name="sign_in_from_other_device">Allow \"Sign in from other device\"?</string>
+    <string name="get_preferred_auth_method"> Get Preferred Auth Method</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
