@@ -2,6 +2,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 vNext
 ----------
+- [MINOR] Rename "is QR + PIN available" API to "get preferred auth method". (#2012)
 - [MINOR] Add support for CIAM custom domain (#2029)
 - [PATCH] Update nimbus-jose-jwt 9.37.3 (#2042)
 
